Start networks implementation
This change also includes a renaming of the api's static function to
raise a not found error to allow for alternative types of not found
exceptions to be raised (e.g. ImageNotFound, NetworkNotFound,
ContainerNotFound, etc)

Signed-off-by: Alex Schultz <aschultz@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -20,4 +20,4 @@ commands = pylint podman
 [testenv:coverage]
 commands =
     coverage run -m nose
-    coverage report --fail-under=80 --omit=podman/tests/* --omit=.tox/*
+    coverage report -m --skip-covered --fail-under=80 --omit=podman/tests/* --omit=.tox/*
