Use black formatter
This change documents the usage of black as the prefered formatter for
this project. Additionally it adds two tox targets that can be used to
have black be invoked.

* `tox -e black` will print out what would be changed
* `tox -e black-format` will actually update the files with the code
  formatted

Black is configured via pyproject.toml with a line-length of 100 and
will skip string normalization

Closes #28

Signed-off-by: Alex Schultz <aschultz@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -21,3 +21,13 @@ commands = pylint podman
 commands =
     coverage run -m nose
     coverage report -m --skip-covered --fail-under=80 --omit=podman/tests/* --omit=.tox/*
+
+[testenv:black]
+deps = black
+commands =
+    black --diff --check .
+
+[testenv:black-format]
+deps = black
+commands =
+    black {posargs} .
