--- a/.pylintrc
+++ b/.pylintrc
@@ -141,7 +141,8 @@ disable=print-statement,
         exception-escape,
         comprehension-escape,
         no-self-use,
-        no-member # PyCQA/pylint#3157
+        no-member, # PyCQA/pylint#3157
+        too-many-public-methods # tests can have many members
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
