Outline compatibility Images area of concern
* podman/domain/images.py has docstrings for all methods on Image,
  ImageManager, and RegistryData.
* Added requests-mock to testing requirements
* Added requests and toml to project requirements
* Updated pyproject.toml to include target python version of 3.6
* Pylint run on all new code
* Updates to code and unittests

Signed-off-by: Jhon Honce <jhonce@redhat.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.black]
 line-length = 100
 skip-string-normalization = true
+target-version = ["py36"]
 include = '\.pyi?$'
 exclude = '''
 /(
@@ -11,3 +12,7 @@ exclude = '''
   | dist
 )/
 '''
+[tool.isort]
+profile = "black"
+line_length = 100
+
