--- a/contrib/cirrus/gating/Dockerfile
+++ b/contrib/cirrus/gating/Dockerfile
@@ -5,6 +5,7 @@ RUN dnf -y install golang \
 			git \
 			golang \
 			python3-requests \
+			python3-requests-mock \
 			python3-coverage \
 			python3-pylint \
 			python3-fixtures && \
