Flesh out Images integration testing
* Add __version__ via api/version.py
* Add PodmanConfig to parse containers.conf, will support reading
  connections
* Added "Images" logger to Image and ImagesManager
* Update Makefile with integration target
* Update client to support unix:// and http+unix:// schemes
* Add Images integration tests
* Add Network unit and integration tests
* Refactor PodmanLauncher to log service output to log file to capture
  debugging events
* Add option to allow podman service to log debugging events during
  tests. Triggered by DEBUG environment variable
* Refactor Image, Network, ImagesManager and NetworksManager as needed
  now integration tests running
* Refactor unittests where as-built differs from swagger
* Switch Podman service to vfs storage driver

Signed-off-by: Jhon Honce <jhonce@redhat.com>

--- a/contrib/cirrus/gating/Dockerfile
+++ b/contrib/cirrus/gating/Dockerfile
@@ -8,5 +8,7 @@ RUN dnf -y install golang \
 			python3-requests-mock \
 			python3-coverage \
 			python3-pylint \
-			python3-fixtures && \
+			python3-fixtures \
+			podman \
+			&& \
 			dnf -y clean all
