--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -39,8 +39,7 @@ gating_task:
         - make
         - go get github.com/vbatts/git-validation
         - make validate
-        - make unittest
-
+        - make tests
 
 success_task:
     # This task is a required-pass in github settings,
