Major cleanup and prep for packaging
* Update Version to 3.2.0
* Map podman.errors.exceptions to podman.errors to be more compatible
* Speed up unit tests, removed unnecessary mocking
* Change Manager.resource to an abtractproperty resulting in better
  error messages when subclasses forget to set resource
* Rewrote for loops into list comprehensions where possible
* Deprecation warnings added for APIConnection
* setup.cfg introduced to hold static configuration
* setup.py refactored to filter out tests, APIConnection, and supporting
  files
* Corrected directory name in Makefile target clean
* Added build-system to pyproject.toml
* Added hidden dependency urllib3 to requirements

Signed-off-by: Jhon Honce <jhonce@redhat.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,4 +15,9 @@ exclude = '''
 [tool.isort]
 profile = "black"
 line_length = 100
-
+[build-system]
+requires = [
+    "setuptools>=42",
+    "wheel",
+]
+build-backend = "setuptools.build_meta"
