Updates for publishing to PyPi
* Update demo in README.md
* Fix links in README.md
* Provide mapping for release version (podman.__version__) vs. API version
  (api.VERSION)
* Fix /libpod/info endpoint tests
* Add upload and release targets to Makefile
* Build python3 wheel file for publication
*

Signed-off-by: Jhon Honce <jhonce@redhat.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,8 @@ install_requires =
     urllib3~=1.26.4
 
 [bdist_wheel]
-universal = true
+# python < 3.6 not supported
+universal = false
 
 [sdist]
 formats = zip
