--- a/setup.cfg
+++ b/setup.cfg
@@ -33,8 +33,8 @@ test_suite =
 install_requires =
     requests>=2.24
     toml>=0.10.2
-    urllib3~=1.24.2
-    pyxdg~=0.26
+    urllib3>=1.24.2
+    pyxdg>=0.26
 
 [bdist_wheel]
 # python < 3.6 not supported
