--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,10 @@ profile = "black"
 line_length = 100
 [build-system]
 requires = [
+    "requests>=2.24",
+    "toml>=0.10.2",
+    "urllib3>=1.24.2",
+    "pyxdg>=0.26",
     "setuptools>=42",
     "wheel",
 ]
