--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = podman-py
+name = podman
 version = attr: podman.__version__
 author = Brent Baude, Jhon Honce
 author_email = jhonce@redhat.com
