Followup to master -> main conversion
Fix the intended destination branch referenced in Cirrus-CI
configuration.

Also update the `latest_podman.sh` script so it won't be sensitive to
`containers/podman` converting master -> main at some future date.

Signed-off-by: Chris Evich <cevich@redhat.com>

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -1,7 +1,7 @@
 ---
 
 env:
-    DEST_BRANCH: "master"
+    DEST_BRANCH: "main"
     GOPATH: "/var/tmp/go"
     GOBIN: "${GOPATH}/bin"
     GOCACHE: "${GOPATH}/cache"
