--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,9 @@ install_requires =
     urllib3>=1.24.2
     pyxdg>=0.26
 
+# typing_extensions are included for RHEL 8.5
+# typing_extensions;python_version<'3.8'
+
 [bdist_wheel]
 # python < 3.6 not supported
 universal = false
