--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ exclude = '''
   | \.venv
   | build
   | dist
+  | docs
+  | hack
 )/
 '''
 [tool.isort]
@@ -17,6 +19,10 @@ profile = "black"
 line_length = 100
 [build-system]
 requires = [
+    "requests>=2.24",
+    "toml>=0.10.2",
+    "urllib3>=1.24.2",
+    "pyxdg>=0.26",
     "setuptools>=46.4",
     "wheel",
 ]
