Cleanup code and CI
- Remove bors CI items
- Run black against whole project
  - with new string processing turned on
  - Cleaned up imports as well

Signed-off-by: Jhon Honce <jhonce@redhat.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.black]
 line-length = 100
 skip-string-normalization = true
+experimental-string-processing = true
 target-version = ["py36"]
 include = '\.pyi?$'
 exclude = '''
