--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,4 +1,15 @@
 version: 2
-mkdocs:
-  configuration: mkdocs.yml
-  fail_on_warning: false
+
+formats:
+  - pdf
+  - epub
+
+python:
+  version: "3.6"
+  install:
+    - requirements: requirements.txt
+
+sphinx:
+  configuration: docs/conf.py
+  fail_on_warning: true
+
