Migrate from Nose to PyTest for test execution
Nose is unmaintained and fails to run under Python 3.10.

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ basepython = python3
 usedevelop = True
 install_command = pip install {opts} {packages}
 deps = -r{toxinidir}/test-requirements.txt
-commands = nosetests
+commands = pytest
 
 [testenv:venv]
 commands = {posargs}
@@ -19,7 +19,7 @@ commands = pylint podman
 
 [testenv:coverage]
 commands =
-    coverage run -m nose
+    coverage run -m pytest
     coverage report -m --skip-covered --fail-under=80 --omit=podman/tests/* --omit=.tox/*
 
 [testenv:black]
