--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.2.0
-envlist = py36,py38,py39,pylint,coverage
+envlist = py36,py38,py39,py310,pylint,coverage
 ignore_basepython_conflict = true
 
 [testenv]
