Cirrus: Replace git-validation tool
The 'DCO' github-app is already enabled.  Disable use of 'make validate'
and add in a commit line-length checker (github-action).

Signed-off-by: Chris Evich <cevich@redhat.com>

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -91,8 +91,7 @@ gating_task:
 
     script:
         - make
-        - go get github.com/vbatts/git-validation
-        - make validate
+        - make lint
 
 test_task:
     name: "Test on $FEDORA_NAME"
