--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ test_suite =
 install_requires =
     pyxdg >=0.26
     requests >=2.24
-    toml >=0.10.2
+    tomli>=1.2.3; python_version<'3.11'
     urllib3 >=1.26.5
 
 # typing_extensions are included for RHEL 8.5
