enable readthedoc builds
work through errors from folks and alter build process for api doc

Signed-off-by: Brent Baude <bbaude@redhat.com>

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -13,3 +13,11 @@ sphinx:
   configuration: docs/source/conf.py
   fail_on_warning: true
 
+build:
+  jobs:
+    pre_build:
+      - mkdir -p build/docs/source
+      - cp -R docs/source/* build/docs/source
+      - sphinx-apidoc --separate --no-toc --force --templatedir build/docs/source/_templates/apidoc \
+		-o build/docs/source \
+		podman podman/tests
