Clean up pylint configuration
* Removed configuration items from .pylintrc that are no longer
  supported and generating warnings.
* Locked "pylint" tox environment to python 3.10. Python 3.11 is
  not supported by Pylint 2.15.5. Dill dependency needs to be updated.

Signed-off-by: Jhon Honce <jhonce@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -18,6 +18,8 @@ setenv =
 commands = {posargs}
 
 [testenv:pylint]
+depends = py310
+basepython = python3.10
 allowlist_externals = pylint
 commands = pylint podman
 
