--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/containers/podman-py
 license =  Apache-2.0
-license_file =  LICENSE
+license_files =  LICENSE
 platforms = any
 project_urls =
     Bug Tracker = https://github.com/containers/podman-py/issues
@@ -34,10 +34,10 @@ python_requires = >=3.6
 test_suite =
 # Any changes should be copied into pyproject.toml
 install_requires =
-    pyxdg>=0.26
-    requests>=2.24
-    toml>=0.10.2
-    urllib3>=1.26.5
+    pyxdg >=0.26
+    requests >=2.24
+    toml >=0.10.2
+    urllib3 >=1.26.5
 
 # typing_extensions are included for RHEL 8.5
 # typing_extensions;python_version<'3.8'
