--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ requires = [
     "requests>=2.24",
     "setuptools>=46.4",
     "sphinx",
-    "tomli>=1.2.3; python_version<'3.11'",
+    "toml>=0.10.2",
     "urllib3>=1.26.5",
     "wheel",
 ]
