Fix version spec in setup.cfg
setuptools reads the AST for a literal string in order to extract this
value. Point to where the value is actually defined. Without this, the
package fails to build with rawhide's setuptools version.

Signed-off-by: Maxwell G <maxwell@gtmx.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = podman
-version = attr: podman.__version__
+version = attr: podman.version.__version__
 author = Brent Baude, Jhon Honce
 author_email = jhonce@redhat.com
 description = Bindings for Podman RESTful API
