Add rich dependency to setup.cfg
Signed-off-by: Jhon Honce <jhonce@redhat.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ test_suite =
 install_requires =
     pyxdg >=0.26
     requests >=2.24
+    rich >=12.5.1
     tomli>=1.2.3; python_version<'3.11'
     urllib3
 
