--- a/setup.cfg
+++ b/setup.cfg
@@ -38,7 +38,7 @@ install_requires =
     requests >=2.24
     tomli>=1.2.3; python_version<'3.11'
     urllib3
-    rich >= 12.5.1
+    rich
 
 # typing_extensions are included for RHEL 8.5
 # typing_extensions;python_version<'3.8'
