--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = podman
-version = 4.9.0
-author = Brent Baude, Jhon Honce
+version = 5.0.0-dev
+author = Brent Baude, Jhon Honce, Urvashi Mohnani
 author_email = jhonce@redhat.com
 description = Bindings for Podman RESTful API
 long_description = file: README.md
