--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = podman
-version = 5.0.0-dev
+version = 5.0.0
 author = Brent Baude, Jhon Honce, Urvashi Mohnani
 author_email = jhonce@redhat.com
 description = Bindings for Podman RESTful API
