--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.2.0
-envlist = pylint,coverage,py36,py38,py39,py310,py311
+envlist = pylint,coverage,py36,py38,py39,py310,py311,py312
 ignore_basepython_conflict = true
 
 [testenv]
