Update test dependencies
1. This commit introduces the [test] subpackage

2. It removes requests-mock <= 1.11 requirement

At the time of writing this commit requests-mock is packaged with the
following versions in Fedora and Epel.

Fedora 42	python-requests-mock-1.10.0-9.fc41
Fedora 41	python-requests-mock-1.10.0-9.fc41
Fedora 40	python-requests-mock-1.10.0-7.fc40
Fedora 39	python-requests-mock-1.10.0-5.fc39
Fedora EPEL 9	python-requests-mock-1.10.0-2.el9
Fedora EPEL 8	python-requests-mock-1.7.0-1.el8

3. It excludes the test subpackage and the check dependencies for test
   dependencies when run for distros which are not Fedora i.e. CentOS
Stream

Signed-off-by: Nicola Sella <nsella@redhat.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,12 @@ progress_bar = [
 docs = [
     "sphinx"
 ]
+test = [
+    "coverage",
+    "fixtures",
+    "pytest",
+    "requests-mock",
+]
 
 [project.urls]
 "Bug Tracker" = "https://github.com/containers/podman-py/issues"
