Renovate: Update default assignment
Signed-off-by: Chris Evich <cevich@redhat.com>

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -51,5 +51,5 @@
    *************************************************/
 
   // Don't leave dep. update. PRs "hanging", assign them to people.
-  "assignees": ["umohnani8", "cevich"],
+  "assignees": ["inknos"],
 }
