Update lint, format checks in tox and cirrus files
Signed-off-by: Nicola Sella <nsella@redhat.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 3.2.0
-envlist = pylint,coverage,py39,py310,py311,py312,py313
+envlist = coverage,py39,py310,py311,py312,py313
 ignore_basepython_conflict = true
 
 [testenv]
@@ -17,21 +17,25 @@ setenv =
 [testenv:venv]
 commands = {posargs}
 
-[testenv:pylint]
-depends = py310
-basepython = python3.10
-allowlist_externals = pylint
-commands = pylint podman
+[testenv:lint]
+depends = ruff
+allowlist_externals = ruff
+commands = ruff check --diff
+
+# TODO: add pylint as alias of lint for compatibility
 
 [testenv:coverage]
 commands =
     coverage run -m pytest
     coverage report -m --skip-covered --fail-under=80 --omit=podman/tests/* --omit=.tox/*
 
-[testenv:black]
-deps = black
+[testenv:format]
+deps = ruff
+allowlist_externals = ruff
 commands =
-    black --diff --check .
+    ruff format --diff
+
+# TODO: add black as alias of format for compatibility
 
 [testenv:black-format]
 deps = black
