--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,3 +14,7 @@ repos:
       args: [ --fix ]
     # Run the formatter.
     - id: ruff-format
+- repo: https://github.com/teemtee/tmt.git
+  rev: 1.39.0
+  hooks:
+    - id: tmt-lint
