--- a/.packit.yaml
+++ b/.packit.yaml
@@ -23,6 +23,7 @@ jobs:
   # Copr builds for Fedora
   - job: copr_build
     trigger: pull_request
+    identifier: pr-fedora
     packages: [python-podman-fedora]
     targets:
       - fedora-all
@@ -30,6 +31,7 @@ jobs:
   # Copr builds for CentOS Stream
   - job: copr_build
     trigger: pull_request
+    identifier: pr-centos
     packages: [python-podman-centos]
     targets:
       - centos-stream-10
@@ -38,6 +40,7 @@ jobs:
   # Copr builds for RHEL
   - job: copr_build
     trigger: pull_request
+    identifier: pr-rhel
     packages: [python-podman-rhel]
     targets:
       - epel-9
@@ -45,6 +48,7 @@ jobs:
   # Run on commit to main branch
   - job: copr_build
     trigger: commit
+    identifier: commit-fedora
     packages: [python-podman-fedora]
     branch: main
     owner: rhcontainerbot
@@ -82,6 +86,7 @@ jobs:
   # This test might break based on the OS and lint used, so we follow fedora-latest as a reference
   - job: tests
     trigger: pull_request
+    identifier: upstream-sanity
     tmt_plan: /upstream/sanity
     packages: [python-podman-fedora]
     targets:
@@ -90,6 +95,7 @@ jobs:
 
   - job: tests
     trigger: pull_request
+    identifier: upstream-all-fedora
     tmt_plan: /upstream/all
     packages: [python-podman-fedora]
     targets:
@@ -97,6 +103,7 @@ jobs:
 
   - job: tests
     trigger: pull_request
+    identifier: upstream-base-centos
     tmt_plan: /upstream/base
     packages: [python-podman-centos]
     targets:
@@ -105,6 +112,7 @@ jobs:
 
   - job: tests
     trigger: pull_request
+    identifier: upstream-base-rhel
     tmt_plan: /upstream/base
     packages: [python-podman-rhel]
     targets:
