--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,8 +66,9 @@ log_cli_level = "DEBUG"
 log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
 
-[tool.setuptools]
-packages = ["podman"]
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["podman*"]
 
 [tool.setuptools.dynamic]
 version = {attr = "podman.version.__version__"}
