misc: add mypy for type checking
Signed-off-by: dklimpel <5740567+dklimpel@users.noreply.github.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,10 @@ repos:
   rev: 1.39.0
   hooks:
     - id: tmt-lint
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: v1.15.0
+  hooks:
+    - id: mypy
+      language: system
+      pass_filenames: false
+      args: ["--package", "podman"]
