--- a/pyproject.toml
+++ b/pyproject.toml
@@ -131,3 +131,37 @@ ignore = [
 builtins-ignorelist = ["copyright", "all"]
 [tool.ruff.lint.per-file-ignores]
 "podman/tests/*.py" = ["S"]
+
+[tool.mypy]
+install_types = true
+non_interactive = true
+allow_redefinition = true
+no_strict_optional = true
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = [
+    "podman.api.adapter_utils",
+    "podman.api.client",
+    "podman.api.ssh",
+    "podman.api.tar_utils",
+    "podman.api.uds",
+    "podman.domain.config",
+    "podman.domain.containers",
+    "podman.domain.containers_create",
+    "podman.domain.containers_run",
+    "podman.domain.events",
+    "podman.domain.images_build",
+    "podman.domain.images_manager",
+    "podman.domain.manager",
+    "podman.domain.manifests",
+    "podman.domain.networks",
+    "podman.domain.networks_manager",
+    "podman.domain.pods",
+    "podman.domain.pods_manager",
+    "podman.domain.registry_data",
+    "podman.domain.secrets",
+    "podman.domain.volumes",
+    "podman.errors.exceptions"
+]
+ignore_errors = true
