--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -21,7 +21,10 @@ build:
 # https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
 python:
   install:
-  - requirements: requirements.txt
+    method: pip
+    path: .
+    extra_requirements:
+      - docs
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
