--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,9 @@ log_cli = true
 log_cli_level = "DEBUG"
 log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
 log_cli_date_format = "%Y-%m-%d %H:%M:%S"
+testpaths = [
+    "podman/tests",
+]
 
 [tool.setuptools.packages.find]
 where = ["."]
