pyproject: exclude unittest.main() from coverage
Signed-off-by: Nicola Sella <nsella@redhat.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -168,3 +168,8 @@ module = [
     "podman.errors.exceptions"
 ]
 ignore_errors = true
+
+[tool.coverage.report]
+exclude_also = [
+    "unittest.main()",
+]
