Split jobs in multiple files
Signed-off-by: Nicola Sella <nsella@redhat.com>

--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,9 +1,9 @@
-name: Publish Python 🐍 distribution 📦 to TestPyPI
+name: Publish Python 🐍 distribution 📦 to PyPI
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v[0-9]+\.[0-9]+\.[0-9]+\.?[0-9]?'
 
 jobs:
   build:
@@ -13,16 +13,15 @@ jobs:
       - name: Build Python package
         uses: ./.github/actions/build-python-package
 
-  publish-to-testpypi:
-    name: Publish Python 🐍 distribution 📦 to TestPyPI
+  publish-to-pypi:
+    name: >-
+      Publish Python 🐍 distribution 📦 to PyPI
     if: ${{ github.repository == 'containers/podman-py' }}
     needs: build
     runs-on: ubuntu-latest
-
     environment:
-      name: testpypi
-      url: https://test.pypi.org/p/podman
-
+      name: pypi
+      url: https://pypi.org/p/podman
     permissions:
       id-token: write # IMPORTANT: mandatory for trusted publishing
 
@@ -32,9 +31,5 @@ jobs:
         with:
           name: python-package-distributions
           path: dist/
-      - name: Publish distribution 📦 to TestPyPI
+      - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
-          skip-existing: true
-          verbose: true
