--- a/.github/workflows/publish-to-pypi.yml
+++ b/.github/workflows/publish-to-pypi.yml
@@ -1,9 +1,9 @@
-name: Publish Python 🐍 distribution 📦 to TestPyPI
+name: Publish Python 🐍 distribution 📦 to PyPI
 
 on:
   push:
-    branches:
-      - main
+    tags:
+      - 'v[0-9]+\.[0-9]+\.[0-9]+\.?[0-9]?'
 
 jobs:
   build:
@@ -17,18 +17,17 @@ jobs:
         uses: ./.github/actions/build-python-package
         with:
           upload-artifact: true
-          artifact-name: python-package-distributions-testpypi
+          artifact-name: python-package-distributions-pypi
 
-  publish-to-testpypi:
-    name: Publish Python 🐍 distribution 📦 to TestPyPI
+  publish-to-pypi:
+    name: >-
+      Publish Python 🐍 distribution 📦 to PyPI
     if: ${{ github.repository == 'containers/podman-py' }}
     needs: build
     runs-on: ubuntu-latest
-
     environment:
-      name: testpypi
-      url: https://test.pypi.org/p/podman
-
+      name: pypi
+      url: https://pypi.org/p/podman
     permissions:
       id-token: write # IMPORTANT: mandatory for trusted publishing
 
@@ -36,11 +35,7 @@ jobs:
       - name: Download artifacts from build job
         uses: actions/download-artifact@v5
         with:
-          name: python-package-distributions-testpypi
+          name: python-package-distributions-pypi
           path: dist/
-      - name: Publish distribution 📦 to TestPyPI
+      - name: Publish distribution 📦 to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url: https://test.pypi.org/legacy/
-          skip-existing: true
-          verbose: true
