--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,3 +25,9 @@ repos:
     - id: mypy
       pass_filenames: false
       args: ["--package", "podman"]
+- repo: https://github.com/renovatebot/pre-commit-hooks
+  rev: 43.3.5
+  hooks:
+    - id: renovate-config-validator
+      args: [--strict]
+      files: '.github/renovate.json5'
